MOSIP-33945 - Fixed the failure test cases
Signed-off-by: Mohanachandran S <mohanachandran.s@technoforte.co.in>
Signed-off-by: Balaji <74903654+balaji-alluru@users.noreply.github.com>

--- a/apitest/src/main/resources/masterdata/TemplateFileFormat/templateFileFormat.hbs
+++ b/apitest/src/main/resources/masterdata/TemplateFileFormat/templateFileFormat.hbs
@@ -4,7 +4,7 @@
   "request": {
     "code": "{{code}}",
     "description": "{{description}}",
-    "isActive": "{{isActive}}",
+    "isActive": {{isActive}},
     "langCode":"{{langCode}}"
   },
   "requesttime": "{{requesttime}}",
