--- a/apitest/src/main/resources/masterdata/RegistrationCenter/registrationCenter.hbs
+++ b/apitest/src/main/resources/masterdata/RegistrationCenter/registrationCenter.hbs
@@ -22,6 +22,7 @@
     "perKioskProcessTime":"{{perKioskProcessTime}}",
     "timeZone":"{{timeZone}}",
     "workingHours":"{{workingHours}}",
+    "numberOfKiosks":{{}},
     "zoneCode":"{{zoneCode}}",
     "id":"{{id}}",
     "exceptionalHolidayPutPostDto": [
