MOSIP-34506 - Fixed masterdata failure test cases
Signed-off-by: Mohanachandran S <mohanachandran.s@technoforte.co.in>
Signed-off-by: Balaji <74903654+balaji-alluru@users.noreply.github.com>

--- a/apitest/src/main/resources/masterdata/RegistrationCenter/registrationCenter.hbs
+++ b/apitest/src/main/resources/masterdata/RegistrationCenter/registrationCenter.hbs
@@ -22,7 +22,7 @@
     "perKioskProcessTime":"{{perKioskProcessTime}}",
     "timeZone":"{{timeZone}}",
     "workingHours":"{{workingHours}}",
-    "numberOfKiosks":{{}},
+    "numberOfKiosks":"{{numberOfKiosks}}",
     "zoneCode":"{{zoneCode}}",
     "id":"{{id}}",
     "exceptionalHolidayPutPostDto": [
