MOSIP-34506 - Fixed masterdata failure test cases
Signed-off-by: Mohanachandran S <mohanachandran.s@technoforte.co.in>

--- a/apitest/src/main/resources/masterdata/Machine/machine.hbs
+++ b/apitest/src/main/resources/masterdata/Machine/machine.hbs
@@ -13,6 +13,7 @@
     "validityDateTime":"{{validityDateTime}}",
     "publicKey":"{{publicKey}}",
     "zoneCode":"{{zoneCode}}",
+    "regCenterId":"{{regCenterId}}",
     "signPublicKey":"{{signPublicKey}}"	
   },
   "requesttime": "{{requesttime}}",
