MOSIP-37943 - Removed the teplate field for search machine spec with model
Signed-off-by: Mohanachandran S <mohanachandran.s@technoforte.co.in>
Signed-off-by: Balaji <74903654+balaji-alluru@users.noreply.github.com>

--- a/api-test/src/main/resources/masterdata/SearchMachineSpec/searchMachineSpecResult.hbs
+++ b/api-test/src/main/resources/masterdata/SearchMachineSpec/searchMachineSpecResult.hbs
@@ -6,6 +6,7 @@
         "isActive": "{{isActive}}",
         "id": "{{id}}",
         "name": "{{name}}",
+        "description": "{{description}}",
         "model": "{{model}}",
         "brand": "{{brand}}",
         "machineTypeCode": "{{machineTypeCode}}",
